--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.5
 configobj==5.0.6
 Django==4.1.2
 docutils==0.19
+gunicorn==20.1.0
 idna==3.3
 Kivy==2.1.0
 kivy-deps.angle==0.3.2
@@ -38,4 +39,5 @@ typing_extensions==4.4.0
 tzdata==2022.5
 urllib3==1.26.10
 wcwidth==0.2.5
+whitenoise==6.2.0
 wincertstore==0.2
